# godelion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_LOG.md  DGM_outer.py  Dockerfile  FORK_NOTICE.md  Makefile  NOTICE  README.md  coding_agent.py  coding_agent_polyglot.py  config.yaml  docker-compose.yml  llm.py  llm_withtools.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run.py  self_improve_step.py  test_swebench.py
.github/workflows/: ci.yml
analysis/: __init__.py  plot_comparison.py  plot_lineage.py  plot_performance.py  plot_progress.py  report.py  visualize_archive.py
godelion/: __init__.py  config.py  llm.py
polyglot/: benchmark.py  constants.py  docker_build.py  docker_utils.py  harness.py  prepare_polyglot_dataset.py  run_evaluation.py  test_spec.py
prompts/: diagnose_improvement_prompt.py  self_improvement_prompt.py  tooluse_prompt.py
swe_bench/: harness.py  report.py  utils.py
tests/: test_bash_tool.py  test_godelion.py  test_smoke_v020.py
tools/: __init__.py  bash.py  edit.py
utils/: docker_utils.py  eval_utils.py  evo_utils.py  git_utils.py  swe_log_parsers.py
