[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "godelion"
version = "0.1.0"
description = "Open-Ended Evolution of Self-Improving Coding Agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["self-improvement", "evolution", "coding-agent", "rsi", "swe-bench"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "datasets",
    "anthropic>=0.30",
    "anthropic[bedrock]",
    "backoff",
    "botocore",
    "boto3",
    "openai>=1.0",
    "beautifulsoup4",
    "chardet",
    "docker",
    "ghapi",
    "GitPython",
    "pre-commit",
    "python-dotenv",
    "rich",
    "unidiff",
    "pytest",
    "pytest-asyncio",
    "async_timeout",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3",
]
analysis = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "graphviz>=0.20",
]

[project.urls]
Source = "https://github.com/YOUR_USERNAME/godelion"
Issues = "https://github.com/YOUR_USERNAME/godelion/issues"

[tool.setuptools.packages.find]
include = ["godelion*"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
